--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -34,10 +34,7 @@
             <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./implementos.html">Equipos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./conocenos.html">Conócenos</a>
+            <a class="nav-link" href="./obras.html">Obras </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
@@ -52,8 +49,9 @@
   </header>
 
   <main>
+    <h3>Clientes</h3>
     <section class="works">
-      <h3>Clientes</h3>
+      
 
       <div class="cards">
         <div class="card translate">
@@ -76,6 +74,12 @@
             class="btn btn-warning btn-lg">HOSPITAL DEL SALVADOR</a>
         </div>
 
+        <div class="card translate">
+          <a href="https://www.hdelsalvador.cl"><img src="../img/nuestro_trabajo/hospSalvador.jpg"></a>
+          <a href="https://firemat.cl/categoria-producto/accesorios/"
+            class="btn btn-warning btn-lg">FIREMAT</a>
+        </div>
+
       </div>
 
     </section>
@@ -85,9 +89,8 @@
 
 
   <footer>
-    <div class="containerFooter">
-      <h5>Copyright © 2023 Beck Soluciones | Created by MCBE </h5>
-    </div>
+    <div class="footer_text">
+    <p>Copyright © 2023 Beck Soluciones | Created by MCBE </p></div>
   </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
