--- a/pages/hablemos.html
+++ b/pages/hablemos.html
@@ -16,7 +16,7 @@
 <body>
 
   <header class="headline">
-   
+
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
       <a class="navbar-brand" href="https://becksoluciones.000webhostapp.com/index.html"><img src="../img/logo.jpg"
           alt="logoBeck"></a>
@@ -34,10 +34,7 @@
             <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./implementos.html">Equipos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./conocenos.html">Conócenos</a>
+            <a class="nav-link" href="./obras.html">Obras</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
@@ -52,62 +49,52 @@
   </header>
 
   <main>
-    <section class="index">
     <h3> Contacto </h3>
-  </section>
-  <div class="contenedor_hablemos">
-    <div class="texto_ubicacion" alt="textoUbicacion"> 
-      
-      <p>Hola Bienvenido! 
-        <p>*****************</p>
-        Hola somos BECK Soluciones, estamos conformados por un equipo de profesionales multidisciplinarios especializados en protección pasiva contra incendios.  <br>
-        Nuestro principal enfoque es asesorar, suministrar e instalar soluciones de protección pasiva en edificios y estructuras para minimizar los  <br>
-        riesgos de incendios y proteger la vida y la propiedad. Una de las soluciones que ofrecemos es la instalación de cortafuegos pasivos,  <br>
-        que pueden prevenir la propagación del fuego y proporcionar una barrera efectiva para limitar su alcance.  <br>
-        Contamos con amplia experiencia en el sector y se enfoca en brindar soluciones personalizadas y de alta calidad para satisfacer las necesidades específicas de sus clientes. <br>
-      </p></div>
-      <div>
-      <img class="mapImg" src="../img/hablemos/map.jpg" alt="mapUbicacion">
+  
+    <div class="contenedor_hablemos">
+
+      <div class="container_map"> <img class="mapImg" src="../img/hablemos/map.jpg" alt="mapUbicacion">
       </div>
-    </div>
-    <div class="containerForm">
 
-      <form>
-        <div class="form-group">
-          <label for="formGroupExampleInput">Nombre completo</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="nombre">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Correo electrónico</label>
+      <div class="containerForm">
+        <form>
+         <div class="form-group">
+          <label for="formGroupExampleInput">Tu nombre</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="nombre completo">
+         </div>
+          <div class="form-group">
+          <label for="exampleInputEmail1">Ingresa un correo electrónico</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="ingrese su correo">
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">Selecciona tu motivo del mensaje</label>
+          placeholder="nombre@correo.cl">
+         </div>
+         <div class="form-group">
+          <label for="exampleFormControlSelect1">Por que te quieres comunicar con nosotros?</label>
           <select class="form-control" id="exampleFormControlSelect1">
-            <option>Cotización</option>
-            <option>Consultas</option>
-            <option>Felicitaciones</option>
-            <option>Reclamos</option>
-            <option>Otros</option>
-          </select>
-        </div>
-        <div class="form-group">
+          <option>Cotización</option>
+          <option>Consultas</option>
+          <option>Felicitaciones</option>
+          <option>Reclamos</option>
+          <option>Otros</option>
+         </select>
+          </div>
+          <div class="form-group">
           <label for="exampleFormControlTextarea1">Mensaje</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <button type="submit" class="btn btn-warning">Enviar</button>
-      </form>
-
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+          placeholder="escribe tu mensaje"></textarea>
+          </div>
+          <button type="submit" class="btn btn-warning">Enviar</button>
+        </form>
+      </div>  
     </div>
   </main>
-</body>
-  <footer>
-    <div class="containerFooter">
-      <h5>Copyright © 2023 Beck Soluciones | Created by MCBE </h5>
-    </div>
-  </footer>
 
+  <footer>
+    <div class="footer_text">
+    <p>Copyright © 2023 Beck Soluciones | Created by MCBE </p>
+  </div>
+  </footer>
+   
+</body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
