--- a/pages/obras.html
+++ b/pages/obras.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../CSS/style.css">
   <meta name="keywords"
     content="cortafuego, pasivo, construccion, fuego, ingenieria, chile, santiago, herramientas, sellos, retardante ">
-  <title>Materiales</title>
+  <title>Obras terminadas</title>
   <link rel="icon" href="./img/logo.jpg" sizes="16x16 32x32" type="image/jpg">
 </head>
 
@@ -35,10 +35,7 @@
             <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./implementos.html">Equipos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./conocenos.html">Conócenos</a>
+            <a class="nav-link" href="./obras.html">Obras</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
@@ -53,40 +50,38 @@
   </header>
 
   <main>
-    <section class="services">
-      <h3>Equipamiento</h3>
-
-      <div class="cards">
-        <div class="card translate">
-          <img src="../img/servicios/retardante.jpg" alt="PinturaRetardante">
-          <a href="https://firemat.cl/productos/" class="btn btn-warning btn-lg">Implementos</a>
-        </div>
-
-
-        <div class="card translate">
-          <img src="../img/servicios/collares.jpeg" alt="ImplementoCollar">
-          <a href="https://firemat.cl/categoria-producto/accesorios/" class="btn btn-warning btn-lg">Herramientas</a>
-        </div>
-
-
-        <div class="card translate">
-          <img src="../img/servicios/cinta.png" alt="Sellos">
-          <a href="https://firemat.cl/categoria-producto/cintas-wraps/" class="btn btn-warning btn-lg">Sellos</a>
-        </div>
+  
+     
+    <h3>Portafolio</h3>
+      <section>
+        
+      <div class="container_obras">
+      <div class="obras">
+         <a href="#"><img src="../img/servicios/obra1.png" alt="obrasterminadas">
+          </a>
+          <a href="#"><img src="../img/servicios/obra2.png" alt="obrasterminadas">
+          </a>
       </div>
 
+      <div class="obras">
+        <a href="#"><img src="../img/servicios/obra3.png" alt="obrasterminadas">
+        </a>
+        <a href="#"><img src="../img/servicios/obra4.png" alt="obrasterminadas">
+        </a>
+      </div>
+      </div>
     </section>
-
   </main>
 
 
-</body>
 
-<footer>
-  <div class="containerFooter">
-    <h5>Copyright © 2023 Beck Soluciones | Created by MCBE </h5>
-  </div>
-</footer>
+
+  <footer>
+    <div class="footer_text">
+    <p>Copyright © 2023 Beck Soluciones | Created by MCBE </p>
+    </div>
+  </footer>
+</body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
