--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../CSS/style.css">
   <meta name="keywords"
     content="cortafuego, pasivo, construccion, fuego, ingenieria, chile, santiago, empleo, trabajo, equipo, terreno">
-  <title>Trabaja con BECK</title>
+  <title>Trabaja con nosotros</title>
   <link rel="icon" href="./img/logo.jpg" sizes="16x16 32x32" type="image/jpg">
 </head>
 
@@ -34,10 +34,7 @@
             <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./implementos.html">Equipos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./conocenos.html">Conócenos</a>
+            <a class="nav-link" href="./obras.html">Obras</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
@@ -52,8 +49,8 @@
   </header>
 
   <main>
+    <h3>Únete a nuetro equipo</h3>
     <section class="works">
-      <h3>Postula</h4>
 
         <div class="cards">
           <div class="card translate">
@@ -86,8 +83,8 @@
 
 
   <footer>
-    <div class="containerFooter">
-      <h5>Copyright © 2023 Beck Soluciones | Created by MCBE </h5>
+    <div class="footer_text">
+    <p>Copyright © 2023 Beck Soluciones | Created by MCBE </p>
     </div>
   </footer>
 </body>
