--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -9,7 +9,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="../CSS/style.css">
   <meta name="keywords" content="cortafuego, pasivo, construccion, fuego, ingenieria, chile, santiago, clientes, obras">
-  <title>Clientes</title>
+  <title>Nuestros clientes</title>
   <link rel="icon" href="./img/logo.jpg" sizes="16x16 32x32" type="image/jpg">
 </head>
 
@@ -34,7 +34,7 @@
             <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./obras.html">Obras </a>
+            <a class="nav-link" href="./obras.html">Portafolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
@@ -49,10 +49,9 @@
   </header>
 
   <main>
-    <h3>Clientes</h3>
-    <section class="works">
+    <h3>Conóce nuestros clientes</h3>
+    <section class="clientes">
       
-
       <div class="cards">
         <div class="card translate">
           <a href="https://www.metro.cl/"><img
@@ -69,13 +68,8 @@
         </div>
 
         <div class="card translate">
-          <a href="https://www.hdelsalvador.cl"><img src="../img/nuestro_trabajo/hospSalvador.jpg"></a>
-          <a href="https://www.hdelsalvador.cl"
-            class="btn btn-warning btn-lg">HOSPITAL DEL SALVADOR</a>
-        </div>
-
-        <div class="card translate">
-          <a href="https://www.hdelsalvador.cl"><img src="../img/nuestro_trabajo/hospSalvador.jpg"></a>
+          <a href="https://www.hdelsalvador.cl"><img 
+            src="../img/nuestro_trabajo/hospSalvador.jpg"></a>
           <a href="https://firemat.cl/categoria-producto/accesorios/"
             class="btn btn-warning btn-lg">FIREMAT</a>
         </div>
