--- a/pages/hablemos.html
+++ b/pages/hablemos.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./obras.html">Obras</a>
+            <a class="nav-link" href="./obras.html">Portafolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
@@ -49,12 +49,9 @@
   </header>
 
   <main>
-    <h3> Contacto </h3>
+    <h3>Estamos felices de escucharte, déjanos tu mensaje </h3>
   
     <div class="contenedor_hablemos">
-
-      <div class="container_map"> <img class="mapImg" src="../img/hablemos/map.jpg" alt="mapUbicacion">
-      </div>
 
       <div class="containerForm">
         <form>
