--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./obras.html">Obras</a>
+            <a class="nav-link" href="./obras.html">Portafolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
@@ -49,33 +49,21 @@
   </header>
 
   <main>
-    <h3>Únete a nuetro equipo</h3>
-    <section class="works">
+    <h3>¿Te gustaría formar parte de nuestro equipo?</h3>
+    <section class="trabajo">
+      <div class="container">
 
-        <div class="cards">
-          <div class="card translate">
-            <a href="https://www.trabajando.cl/"><img
-                src="../img/trabaja_con_nosotros/asistenteadministrativa.jpg"></a>
-            <a href="https://www.metro.cl/"
-              class="btn btn-warning btn-lg">ASISTENTE CONTABLE</a>
-          </div>
-
-          <div class="card translate">
-            <a href="https://www.trabajando.cl/"><img
-                src="../img/trabaja_con_nosotros/maestroCarpintero.jpg"></a>
-            <a href="https://www.trabajando.cl/"
-              class="btn btn-warning btn-lg">MAESTRO CARPINTERO</a>
-          </div>
-
-          <div class="card translate">
-            <a href="https://www.trabajando.cl/"><img
-                src="../img/trabaja_con_nosotros/prevencionriesgos.jpg"></a>
-            <a href="https://www.trabajando.cl/"
-              class="btn btn-warning btn-lg">INGENIERO</a>
-          </div>
-
-        </div>
-
+        <p>Estamos buscando trabajadores para nuestra obra civil de instalación de cortafuegos. <br>
+          Si tienes experiencia en trabajos de construcción, ¡queremos conocerte! <br>
+          Pronto nos contactaremos contigo</p>
+        <form action="#" method="POST">
+          <label for="nombre">Nombre completo:</label>
+          <input type="text" id="nombre" name="nombre" required>
+          <label for="correo">Correo electrónico:</label>
+          <input type="email" id="correo" name="correo" required>
+          <input type="submit" value="Enviar solicitud">
+        </form>
+      </div>
     </section>
 
   </main>
