--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="./pages/clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/obras.html">Obras</a>
+            <a class="nav-link" href="./pages/obras.html">Portafolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pages/trabaja_con_nosotros.html">Únete</a>
